# ExcelPPTSliderMapper

./: .gitignore  README.md  README_zh.md  pyproject.toml  requirements.txt
src/excel_ppt_mapper/: excel_ppt_mapper.py
