[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "excel-ppt-mapper"
version = "1.0.0"
description = "A Python tool for mapping Excel data to PowerPoint templates"
readme = "README.md"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["excel", "powerpoint", "automation", "template"]
dependencies = [
    "pandas >= 1.3.0",
    "openpyxl >= 3.0.0",
    "psutil >= 5.8.0",
    "pywin32 >= 300",
]
requires-python = ">=3.6"

[project.urls]
Homepage = "https://github.com/yourusername/ExcelPPTSliderMapper"

[tool.setuptools.packages.find]
where = ["src"]
include = ["excel_ppt_mapper*"]
namespaces = false

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"] 